# mcp-dbutils

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_AR.md  README_CN.md  README_EN.md  README_ES.md  README_FR.md  README_RU.md  config.yaml.example  coverage.xml  pyproject.toml  requirements.txt  smithery.yaml  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report_ar.md  bug_report_en.md  bug_report_es.md  bug_report_fr.md  bug_report_ru.md  bug_report_zh.md  config.yml  documentation_improvement_ar.md  documentation_improvement_en.md  documentation_improvement_es.md  documentation_improvement_fr.md  documentation_improvement_ru.md  documentation_improvement_zh.md  feature_request_ar.md  feature_request_en.md  feature_request_es.md  feature_request_fr.md  feature_request_ru.md  feature_request_zh.md  performance_issue_ar.md  performance_issue_en.md  performance_issue_es.md  performance_issue_fr.md  performance_issue_ru.md  performance_issue_zh.md  security_vulnerability_ar.md  security_vulnerability_en.md  security_vulnerability_es.md  security_vulnerability_fr.md  security_vulnerability_ru.md  security_vulnerability_zh.md
.github/workflows/: code-style.yml  issue-translator.yml  publish.yml  quality-assurance.yml  release.yml  test.yml
docs/: STYLE_GUIDE.md  configuration-examples.md  document-consistency-check.md  document-version-history.md  index.md  sonarcloud-ai-integration.md  technical-guide.md  write-operations.md
docs/ar/: configuration.md  installation-platform-specific.md  installation.md  usage.md
docs/ar/examples/: README.md  advanced-llm-interactions.md  mysql-examples.md  postgresql-examples.md  sqlite-examples.md
docs/ar/technical/: architecture.md  development.md  security.md  sonarcloud-integration.md  testing.md
docs/design/: multi_database_architecture.md  multi_database_class_diagram.md  multi_database_data_flow.md  multi_database_implementation_plan.md
docs/en/: configuration.md  installation-platform-specific.md  installation.md  usage.md
docs/en/examples/: advanced-llm-interactions.md  mysql-examples.md  postgresql-examples.md  sqlite-examples.md
docs/en/technical/: architecture.md  development.md  security.md  sonarcloud-integration.md  testing.md
docs/es/: configuration.md  installation-platform-specific.md  installation.md  usage.md
docs/es/examples/: README.md  advanced-llm-interactions.md  mysql-examples.md  postgresql-examples.md  sqlite-examples.md
docs/es/technical/: architecture.md  development.md  security.md  sonarcloud-integration.md  testing.md
docs/fr/: configuration.md  installation-platform-specific.md  installation.md  usage.md
docs/fr/examples/: README.md  advanced-llm-interactions.md  mysql-examples.md  postgresql-examples.md  (+1 more)
docs/ru/: configuration.md  installation-platform-specific.md  installation.md  usage.md
docs/zh/: configuration-write-operations.md  configuration.md  installation-platform-specific.md  installation.md  security-best-practices.md  usage-write-operations.md  usage.md
examples/: config.yaml
scripts/: check_docs_consistency.py  check_zh_docs.py  fix_en_nav_links.py  fix_imports.sh  fix_remaining_issues.sh  fix_zh_nav_links.py  run_sonar_analysis.sh  sonar-ai-fix.fish
src/mcp_dbutils/: __init__.py  audit.py  base.py  config.py  log.py  stats.py
src/mcp_postgres/: __init__.py  config.py  log.py  server.py
src/postgres/: __init__.py  config.py  server.py
tests/: conftest.py  test_write_operations.py
tests/integration/: conftest.py  fixtures.py  test_list_connections.py  test_logging.py  test_monitoring.py  test_monitoring_enhanced.py  test_mysql.py  test_mysql_config.py  test_mysql_config_helpers.py  test_mysql_handler_extended.py  test_postgres.py  test_postgres_config.py  test_prompts.py  test_sqlite.py  test_sqlite_config.py  test_sqlite_handler_extended.py  test_tools.py  test_tools_advanced.py
tests/unit/: test_audit.py  test_base.py  test_base_extended.py  test_base_handlers.py  test_base_helpers.py  test_base_server.py  test_base_write_operations.py  test_init.py  test_log.py  test_mysql_handler.py  test_mysql_server.py  test_permission_combinations.py  test_postgres_handler.py  test_postgres_server.py  test_sql_parsing.py  test_sqlite_handler.py  test_sqlite_server.py  test_stats.py  test_table_name_handling.py  test_write_permissions.py
(+42 files in other folders)
